--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           update: true
           msystem: MINGW64
-          install: git make autoconf automake libtool autogen perl
+          install: git make autoconf2.69 automake libtool autogen perl
           
       - name: curl x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
         shell: cmd
@@ -38,7 +38,7 @@ jobs:
         run: |
             export PATH="${{ github.workspace }}/mingw64:${{ github.workspace }}/mingw64/bin:${{ github.workspace }}/msys64/usr/bin:/usr/bin" &&
             cd gettext && g++ --version && ./autogen.sh && ./configure mingw64 -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
-            mingw32-make.exe && mingw32-make.exe install
+            make && make install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
