--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -40,9 +40,9 @@ jobs:
             g++ --version && 
             cd gettext && 
             ls &&
-            ./autopull.sh &&
             ./autogen.sh &&
-            ./configure
+            ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
+            make && make install
             
     # ./configure mingw64 -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
     # make && make install
