- update .github/workflows/build-mingw.yml

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -40,7 +40,8 @@ jobs:
             g++ --version && 
             cd gettext && 
             ls &&
-            ./autogen.sh pull &&
+            ./autogen.sh &&
+            ./gitsub.sh pull &&
             ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
             make && make install
             
