--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -44,9 +44,10 @@ jobs:
             sed -i 's/AC_PREREQ(\[2.63\])/AC_PREREQ(\[2.64\])/g' ./configure.ac &&
             cd .. &&
             ./autogen.sh &&
-            ./gitsub.sh pull &&
-            ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
-            make && make install
+            ./gitsub.sh pull
+            
+         # ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
+        #  make && make install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
