- update .github/workflows/build-mingw.yml

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -44,7 +44,7 @@ jobs:
             # cd gettext-tools &&
             # sed -i 's/AC_PREREQ(\[2.63\])/AC_PREREQ(\[2.64\])/g' ./configure.ac &&
             # cd .. &&
-            ./autogen.sh && \
+            ./autogen.sh &&
             ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
                    # ./gitsub.sh pull
         #  make && make install
