- update .github/workflows/build-mingw.yml

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -41,7 +41,8 @@ jobs:
             gcc --version &&
             cd gettext && 
             ./autogen.sh &&
-            ./configure -static --enable-relocatable --prefix="$(pwd)/${{ env.installationPath }}" &&
+            ./configure --help &&
+            ./configure --prefix="$(pwd)/${{ env.installationPath }}" &&
             make && make install
             
       - name: Archive Release
