--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -43,7 +43,7 @@ jobs:
             ./autogen.sh &&
             ./configure --help &&
             ./configure --prefix="$(pwd)/${{ env.installationPath }}" &&
-            make && make install
+            make VERBOSE=1 && make install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
