--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -42,9 +42,8 @@ jobs:
             cd gettext && 
             ./autogen.sh &&
             ./configure --help 
-            
-            # ./configure --prefix="$(pwd)/${{ env.installationPath }}" &&
-            # make VERBOSE=1 && make install
+            ./configure --disable-java --enable-static --enable-shared --disable-rpath --enable-relocatable --disable-openmp --prefix="$(pwd)/${{ env.installationPath }}" &&
+            make VERBOSE=1 && make install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
