--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -50,7 +50,7 @@ jobs:
             tar -xvf gettext-0.21.1.tar.gz &&
             cd gettext-0.21.1 &&
             ./configure --help &&
-            ./configure --host=x86_64-w64-mingw32 \
+            ./configure --host=x86_64-w64-mingw32 --host-os=mingw64 \
             CC=x86_64-w64-mingw32-gcc \
             CXX=x86_64-w64-mingw32-g++ \
             CPPFLAGS="-I/mingw64/include -Wall" \
