--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           update: true
           msystem: MINGW64
-          install: git make autoconf automake libtool autogen perl bison flex patch gperf python
+          install: git autoconf automake libtool autogen perl bison flex patch gperf python
           
       - name: curl x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
         shell: cmd
@@ -50,16 +50,14 @@ jobs:
             tar -xvf gettext-0.21.1.tar.gz &&
             cd gettext-0.21.1 &&
             ./configure --help &&
-            ./configure \
-            CPPFLAGS="-I/mingw64/include -Wall" \
-            LDFLAGS="-L/mingw64/lib" \
+            ./configure --build=x86_64-w64-mingw32 --host=x86_64-w64-mingw32 \
             --disable-java \
             --enable-static \
             --enable-shared  \
             --disable-rpath \
             --enable-relocatable \
             --prefix="$(pwd)/${{ env.installationPath }}" &&
-            make VERBOSE=1 && make install
+            mingw32-make.exe VERBOSE=1 && mingw32-make.exe install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
