--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -19,58 +19,65 @@ jobs:
       - name: download distribution
         shell: cmd
         run: | 
-          curl https://ftp.gnu.org/pub/gnu/gettext/gettext-0.21.1.tar.gz -L --output gettext-0.21.1.tar.gz
+          curl https://ftp.gnu.org/pub/gnu/gettext/gettext-0.21.1.tar.gz -L -O
           
-      - name: git clone
-        shell: cmd
-        run: | 
-          git clone --recursive https://git.savannah.gnu.org/git/gnulib.git &&^
-          cd gnulib &&^
-          git checkout v0.1
+      # - name: git clone
+      #   shell: cmd
+      #   run: | 
+      #     git clone --recursive https://git.savannah.gnu.org/git/gnulib.git &&^
+      #     cd gnulib &&^
+      #     git checkout v0.1
       
       - name: Install MSYS2
         uses: msys2/setup-msys2@v2
         with:
           update: true
           msystem: MINGW64
-          install: git autoconf automake libtool autogen perl bison flex patch gperf python wget xz
+          install: git make autoconf automake libtool autogen perl bison flex patch gperf python wget xz
           
       - name: curl x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
         shell: cmd
+        run:  curl https://github.com/2641797006/c/blob/master/GCC-zip/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z?raw=true -L --output x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z && dir && 7z.exe x x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
+      
+      - name: curl PortableGit-2.38.1-64-bit.7z.exe
+        shell: cmd
+        run:  curl https://github.com/git-for-windows/git/releases/download/v2.38.1.windows.1/PortableGit-2.38.1-64-bit.7z.exe -L --output PortableGit-2.38.1-64-bit.7z.exe && dir && 7z.exe x PortableGit-2.38.1-64-bit.7z.exe -o"${{ github.workspace }}\PortableGit-2.38.1-64-bit"
+
+      - shell: cmd
         run: |
-          curl https://github.com/2641797006/c/blob/master/GCC-zip/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z?raw=true -L --output x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z && dir && 7z.exe x x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
+          .\PortableGit-2.38.1-64-bit\usr\bin\tar.exe -zxvf gettext-0.21.1.tar.gz &&^
+          rename gettext-0.21.1 gettext
         
+# export GNULIB_SRCDIR="$workspace/gnulib" &&
+# export MAKE="mingw32-make.exe" &&
+            
       - name: set PATH, check mingw version, cmake generate, build and install
         shell: msys2 {0}
         run: |
             workspace=$(pwd) &&
-            export PATH="$workspace/mingw64:$workspace/mingw64/bin:$workspace/msys64/usr/bin:/usr/bin:$workspace/cmake-3.24.0-windows-x86_64/bin" &&
-            export GNULIB_SRCDIR="$workspace/gnulib" &&
-            export MAKE="mingw32-make.exe" &&
+            export PATH="$workspace/mingw64:$workspace/mingw64/bin:$workspace/msys64/usr/bin:/usr/bin" &&
             gcc --version &&
-            tar -xvf gettext-0.21.1.tar.gz &&
-            cd gettext-0.21.1 && \
-            ./autogen.sh && \
+            cd gettext && \
+            ./configure --help && \
             ./configure \
             --disable-java \
-            --enable-static \
-            --enable-shared  \
             --disable-rpath \
             --enable-relocatable \
-            --without-libiconv-prefix \
+            --enable-shared=yes \
+            --enable-static=yes \
             --prefix="$(pwd)/${{ env.installationPath }}" && \
-            $MAKE VERBOSE=1 && $MAKE install
+            make VERBOSE=1 && make install
             
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
-          directory: "${{ github.workspace }}/gettext-0.21.1"
+          directory: "gettext/${{ env.installationPath }}"
           filename: "${{ env.mingwTargetZip }}"
         
       - name: Release prebuilt
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "${{ github.workspace }}/gettext-0.21.1/${{ env.mingwTargetZip }}"
+          artifacts: "gettext/${{ env.installationPath }}/${{ env.mingwTargetZip }}"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
