- update .github/workflows/build-mingw.yml

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -60,6 +60,7 @@ jobs:
             cd gettext && \
             ./configure --help && \
             ./configure \
+            --host=x86_64-w64-mingw32 && \
             --disable-java \
             --disable-rpath \
             --enable-relocatable \
